Fix whitespace collapsing in log view

--- a/assets/sai.css
+++ b/assets/sai.css
@@ -194,7 +194,7 @@ span.noscript {
 }
 
 span.nowrap {
-	white-space: nowrap;
+	white-space: pre;
 }
 
 div.taskinfo {
